# ai-dial-log-parser

./: .dockerignore  .gitignore  .ort.yml  Dockerfile  Makefile  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml
.github/workflows/: deploy-development.yml  pr-title-check.yml  pr.yml  release.yml
src/aidial_log_parser/: input_parameter.py  parse_logs.py
tests/: test_parse_logs.py
