[tool.poetry]
name = "aidial-log-parser"
version = "0.1.0"
description = "Tool to parse ai-dial log files and repack it to parquet dataset."
authors = ["EPAM RAIL <SpecialEPM-DIALDevTeam@epam.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["ai"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/epam/ai-dial-log-parser"

[tool.poetry.dependencies]
python = "^3.12"
fsspec = "^2024.3.1"
pyarrow = "^20.0.0"
s3fs = "^2024.3.1"
click = "^8.1.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
coverage = {extras = ["toml"], version = "^7.4.4"}
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"
fsspec = "^2024.6.0"

[tool.poetry.group.lint.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.2.6"
isort = "^5.13.2"
flake8-isort = "^6.1.1"
pyright = "^1.1.365"

[tool.poetry.group.nox.dependencies]
nox = "^2024.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "basic"
reportUnusedVariable = "error"
reportIncompatibleMethodOverride = "error"
exclude = [
    ".git",
    ".venv",
    ".nox",
    "**/__pycache__"
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
